--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ yarn-error.log
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
+node_modules
+package-lock.json
 
 **/fastlane/report.xml
 **/fastlane/Preview.html
