--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
